Adição de uma possibilidade de 70% de dar erro

--- a/webui/package.json
+++ b/webui/package.json
@@ -24,6 +24,7 @@
     "@clr/angular": "^0.11.2-patch",
     "@clr/icons": "^0.11.2-patch",
     "@clr/ui": "^0.11.2-patch",
+    "@elastic/apm-rum-angular": "^1.1.6",
     "@swimlane/ngx-charts": "^7.0.1",
     "@swimlane/ngx-datatable": "11.1.7",
     "@webcomponents/custom-elements": "^1.0.8",
